Version 4.1.5
- Suppressed optimization of inline assembly inside ORG/END (but not ASM/ENDASM)
- Fixed some issues with compiling with the -C flag

Version 4.1.4
- Fixed a problem with pruning of methods called indirectly via a pointer
- Fixed function pointers pointing outside of current module
- Fixed comments and/or spaces after ASM in Spin code
- Fixed a problem with C local variable names used on RHS of initialization
- Fixed COG PC output in listing files for sub-objects
- Fixed incorrect treatment of functions containing LOOKUP/LOOKDOWN
- Fixed an optimizer bug that could lead to memory corruption sometimes
- Fixed promotion of array arguments to coginit
- Improved stack handling in COG functions
- Implemented default parameter values for C
- Made recognition of _ empty assignment marker be P2 only
- Accept ORG/END as well as ASM/ENDASM for inline assembly in Spin2
- Accept "foo.bar" notation for constants as well as "foo#bar"
- Accept BYTE, WORD, LONG modifiers for Spin local variables
- Accept some uses of $ in inline assembly
- Added some more simpletools functions
- Added many P2 smartpin constants
- Began work on stdio functions
- Recognize <= and >= for .spin2 files
- Made "_" have a special meaning only in .spin2
- Recognize "byte long x" in DAT sections of Spin files

Version 4.1.3
- Allow const qualifier for inline assembly

Version 4.1.2
- Fixed "backwards" case ranges in Spin
- Fixed _rev() operator in C propeller2.h file for P2
- Suppressed removal of unused methods when optimization is turned off
- Used JMPREL to implement case_fast in P2
- Started porting simpletools
- Improved messages about const assignment
- Allow strings in BASIC const declarations
- In C++ class declarations make variables private by default
- Improved some error messages about array declarations

Version 4.1.1
- Fixed Spin REV operator to match PNut's Spin2 definition.
- Optimize some P2 moves into BMASK or DECOD instructions