@@ -413,35 +413,46 @@ unsigned char sys_p2_code_spin[] = {
   0x74, 0x69, 0x6e, 0x67, 0x20, 0x75, 0x70, 0x20, 0x73, 0x6d, 0x61, 0x72,
   0x74, 0x70, 0x69, 0x6e, 0x20, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x65, 0x74,
   0x65, 0x72, 0x73, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x5f, 0x70, 0x69, 0x6e,
-  0x6d, 0x6f, 0x64, 0x65, 0x28, 0x70, 0x69, 0x6e, 0x2c, 0x20, 0x6d, 0x6f,
-  0x64, 0x65, 0x2c, 0x20, 0x78, 0x76, 0x61, 0x6c, 0x2c, 0x20, 0x79, 0x76,
-  0x61, 0x6c, 0x29, 0x0a, 0x20, 0x20, 0x5f, 0x64, 0x69, 0x72, 0x6c, 0x28,
-  0x70, 0x69, 0x6e, 0x29, 0x0a, 0x20, 0x20, 0x5f, 0x77, 0x72, 0x70, 0x69,
-  0x6e, 0x28, 0x70, 0x69, 0x6e, 0x2c, 0x20, 0x6d, 0x6f, 0x64, 0x65, 0x29,
-  0x0a, 0x20, 0x20, 0x5f, 0x77, 0x78, 0x70, 0x69, 0x6e, 0x28, 0x70, 0x69,
-  0x6e, 0x2c, 0x20, 0x78, 0x76, 0x61, 0x6c, 0x29, 0x0a, 0x20, 0x20, 0x5f,
-  0x77, 0x79, 0x70, 0x69, 0x6e, 0x28, 0x70, 0x69, 0x6e, 0x2c, 0x20, 0x79,
-  0x76, 0x61, 0x6c, 0x29, 0x0a, 0x20, 0x20, 0x5f, 0x64, 0x69, 0x72, 0x68,
-  0x28, 0x70, 0x69, 0x6e, 0x29, 0x0a, 0x20, 0x20, 0x0a, 0x27, 0x20, 0x76,
-  0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x73, 0x20, 0x6f, 0x66, 0x20, 0x73,
-  0x6d, 0x61, 0x72, 0x74, 0x70, 0x69, 0x6e, 0x20, 0x69, 0x6e, 0x73, 0x74,
-  0x72, 0x75, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x20, 0x77, 0x69, 0x74,
-  0x68, 0x20, 0x74, 0x68, 0x65, 0x20, 0x53, 0x70, 0x69, 0x6e, 0x20, 0x6f,
-  0x72, 0x64, 0x65, 0x72, 0x20, 0x6f, 0x66, 0x20, 0x70, 0x61, 0x72, 0x61,
-  0x6d, 0x65, 0x74, 0x65, 0x72, 0x73, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x5f,
-  0x77, 0x72, 0x70, 0x69, 0x6e, 0x28, 0x70, 0x69, 0x6e, 0x2c, 0x20, 0x76,
-  0x61, 0x6c, 0x29, 0x0a, 0x20, 0x20, 0x61, 0x73, 0x6d, 0x0a, 0x20, 0x20,
-  0x20, 0x20, 0x77, 0x72, 0x70, 0x69, 0x6e, 0x20, 0x76, 0x61, 0x6c, 0x2c,
+  0x73, 0x65, 0x74, 0x75, 0x70, 0x28, 0x70, 0x69, 0x6e, 0x2c, 0x20, 0x6d,
+  0x6f, 0x64, 0x65, 0x2c, 0x20, 0x78, 0x76, 0x61, 0x6c, 0x2c, 0x20, 0x79,
+  0x76, 0x61, 0x6c, 0x29, 0x0a, 0x20, 0x20, 0x5f, 0x64, 0x69, 0x72, 0x6c,
+  0x28, 0x70, 0x69, 0x6e, 0x29, 0x0a, 0x20, 0x20, 0x5f, 0x77, 0x72, 0x70,
+  0x69, 0x6e, 0x28, 0x70, 0x69, 0x6e, 0x2c, 0x20, 0x6d, 0x6f, 0x64, 0x65,
+  0x29, 0x0a, 0x20, 0x20, 0x5f, 0x77, 0x78, 0x70, 0x69, 0x6e, 0x28, 0x70,
+  0x69, 0x6e, 0x2c, 0x20, 0x78, 0x76, 0x61, 0x6c, 0x29, 0x0a, 0x20, 0x20,
+  0x5f, 0x77, 0x79, 0x70, 0x69, 0x6e, 0x28, 0x70, 0x69, 0x6e, 0x2c, 0x20,
+  0x79, 0x76, 0x61, 0x6c, 0x29, 0x0a, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x5f,
+  0x70, 0x69, 0x6e, 0x73, 0x74, 0x61, 0x72, 0x74, 0x28, 0x70, 0x69, 0x6e,
+  0x2c, 0x20, 0x6d, 0x6f, 0x64, 0x65, 0x2c, 0x20, 0x78, 0x76, 0x61, 0x6c,
+  0x2c, 0x20, 0x79, 0x76, 0x61, 0x6c, 0x29, 0x0a, 0x20, 0x20, 0x5f, 0x70,
+  0x69, 0x6e, 0x73, 0x65, 0x74, 0x75, 0x70, 0x28, 0x70, 0x69, 0x6e, 0x2c,
+  0x20, 0x6d, 0x6f, 0x64, 0x65, 0x2c, 0x20, 0x78, 0x76, 0x61, 0x6c, 0x2c,
+  0x20, 0x79, 0x76, 0x61, 0x6c, 0x29, 0x0a, 0x20, 0x20, 0x5f, 0x64, 0x69,
+  0x72, 0x68, 0x28, 0x70, 0x69, 0x6e, 0x29, 0x0a, 0x0a, 0x70, 0x72, 0x69,
+  0x20, 0x5f, 0x70, 0x69, 0x6e, 0x63, 0x6c, 0x65, 0x61, 0x72, 0x28, 0x70,
+  0x69, 0x6e, 0x29, 0x0a, 0x20, 0x20, 0x61, 0x73, 0x6d, 0x0a, 0x20, 0x20,
+  0x20, 0x20, 0x66, 0x6c, 0x74, 0x6c, 0x20, 0x70, 0x69, 0x6e, 0x0a, 0x20,
+  0x20, 0x20, 0x20, 0x77, 0x72, 0x70, 0x69, 0x6e, 0x20, 0x23, 0x30, 0x2c,
   0x20, 0x70, 0x69, 0x6e, 0x0a, 0x20, 0x20, 0x65, 0x6e, 0x64, 0x61, 0x73,
-  0x6d, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x5f, 0x77, 0x78, 0x70, 0x69, 0x6e,
-  0x28, 0x70, 0x69, 0x6e, 0x2c, 0x20, 0x76, 0x61, 0x6c, 0x29, 0x0a, 0x20,
-  0x20, 0x61, 0x73, 0x6d, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x77, 0x78, 0x70,
-  0x69, 0x6e, 0x20, 0x76, 0x61, 0x6c, 0x2c, 0x20, 0x70, 0x69, 0x6e, 0x0a,
-  0x20, 0x20, 0x65, 0x6e, 0x64, 0x61, 0x73, 0x6d, 0x0a, 0x70, 0x72, 0x69,
-  0x20, 0x5f, 0x77, 0x79, 0x70, 0x69, 0x6e, 0x28, 0x70, 0x69, 0x6e, 0x2c,
-  0x20, 0x76, 0x61, 0x6c, 0x29, 0x0a, 0x20, 0x20, 0x61, 0x73, 0x6d, 0x0a,
-  0x20, 0x20, 0x20, 0x20, 0x77, 0x79, 0x70, 0x69, 0x6e, 0x20, 0x76, 0x61,
-  0x6c, 0x2c, 0x20, 0x70, 0x69, 0x6e, 0x0a, 0x20, 0x20, 0x65, 0x6e, 0x64,
-  0x61, 0x73, 0x6d, 0x0a, 0x00
+  0x6d, 0x0a, 0x20, 0x20, 0x0a, 0x27, 0x20, 0x76, 0x65, 0x72, 0x73, 0x69,
+  0x6f, 0x6e, 0x73, 0x20, 0x6f, 0x66, 0x20, 0x73, 0x6d, 0x61, 0x72, 0x74,
+  0x70, 0x69, 0x6e, 0x20, 0x69, 0x6e, 0x73, 0x74, 0x72, 0x75, 0x63, 0x74,
+  0x69, 0x6f, 0x6e, 0x73, 0x20, 0x77, 0x69, 0x74, 0x68, 0x20, 0x74, 0x68,
+  0x65, 0x20, 0x53, 0x70, 0x69, 0x6e, 0x20, 0x6f, 0x72, 0x64, 0x65, 0x72,
+  0x20, 0x6f, 0x66, 0x20, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x65, 0x74, 0x65,
+  0x72, 0x73, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x5f, 0x77, 0x72, 0x70, 0x69,
+  0x6e, 0x28, 0x70, 0x69, 0x6e, 0x2c, 0x20, 0x76, 0x61, 0x6c, 0x29, 0x0a,
+  0x20, 0x20, 0x61, 0x73, 0x6d, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x77, 0x72,
+  0x70, 0x69, 0x6e, 0x20, 0x76, 0x61, 0x6c, 0x2c, 0x20, 0x70, 0x69, 0x6e,
+  0x0a, 0x20, 0x20, 0x65, 0x6e, 0x64, 0x61, 0x73, 0x6d, 0x0a, 0x70, 0x72,
+  0x69, 0x20, 0x5f, 0x77, 0x78, 0x70, 0x69, 0x6e, 0x28, 0x70, 0x69, 0x6e,
+  0x2c, 0x20, 0x76, 0x61, 0x6c, 0x29, 0x0a, 0x20, 0x20, 0x61, 0x73, 0x6d,
+  0x0a, 0x20, 0x20, 0x20, 0x20, 0x77, 0x78, 0x70, 0x69, 0x6e, 0x20, 0x76,
+  0x61, 0x6c, 0x2c, 0x20, 0x70, 0x69, 0x6e, 0x0a, 0x20, 0x20, 0x65, 0x6e,
+  0x64, 0x61, 0x73, 0x6d, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x5f, 0x77, 0x79,
+  0x70, 0x69, 0x6e, 0x28, 0x70, 0x69, 0x6e, 0x2c, 0x20, 0x76, 0x61, 0x6c,
+  0x29, 0x0a, 0x20, 0x20, 0x61, 0x73, 0x6d, 0x0a, 0x20, 0x20, 0x20, 0x20,
+  0x77, 0x79, 0x70, 0x69, 0x6e, 0x20, 0x76, 0x61, 0x6c, 0x2c, 0x20, 0x70,
+  0x69, 0x6e, 0x0a, 0x20, 0x20, 0x65, 0x6e, 0x64, 0x61, 0x73, 0x6d, 0x0a, 0x00
 };
-unsigned int sys_p2_code_spin_len = 5320;
+unsigned int sys_p2_code_spin_len = 5460;
